# loans_management

./: .gitignore  README.md  docker-compose.yml  pyproject.toml  pytest.ini
config/prod/: .env
docker/django/: Dockerfile
docker/nginx/: Dockerfile  nginx.conf
loans_manager/: manage.py
loans_manager/accounts/: views.py
loans_manager/accounts/templates/: login.html
loans_manager/loans/: filters.py  forms.py  models.py  serializers.py  utils.py  views.py
loans_manager/loans/migrations/: 0001_initial.py  0002_loan_total_interest_alter_loan_interest_rate_and_more.py  0003_alter_loan_payments_alter_loan_total_interest.py  0004_loan_original_amount.py  0005_remove_loan_payments_loan_person.py  0006_remove_loan_payments.py
loans_manager/loans/templates/: loan_form.html  loan_list.html
loans_manager/loans_manager/: asgi.py  settings.py  urls.py  utils.py  wsgi.py
loans_manager/payments/: admin.py  filters.py  forms.py  models.py  serializers.py  signals.py  views.py
loans_manager/payments/migrations/: 0001_initial.py  0002_payment_loan.py  0003_alter_payment_payment_method.py
loans_manager/payments/templates/: payment_form.html  payment_list.html
loans_manager/persons/: filters.py  forms.py  models.py  serializers.py  views.py
loans_manager/persons/migrations/: 0001_initial.py  0002_remove_person_loans_person_loans.py  0003_alter_person_bank_account_alter_person_bank_name_and_more.py  0004_remove_person_loans.py
loans_manager/persons/templates/: person_form.html  person_list.html
loans_manager/tests/: helpers.py
(+6 files in other folders)
